--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,13 @@
   <meta name="msapplication-config" content="assets/img/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:image" content="https://i.postimg.cc/YCz7x2fZ/banner-30days.jpg">
+  <link rel="image_src" href="https://i.postimg.cc/YCz7x2fZ/banner-30days.jpg">
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://belajar-js.tfkhdyt.my.id" />
+  <meta property="og:title" content="30 Hari Jago JavaScript">
+  <meta property="og:description" content="Website Pembelajaran JavaScript Berbasis Video">
+  <meta name="description" content="Website Pembelajaran JavaScript Berbasis Video">
   <title>30 Hari Jago JavaScript</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
