--- a/public/index.html
+++ b/public/index.html
@@ -61,11 +61,29 @@
     </div>
   </div>
 
+  <!-- Modal Download -->
+  <div class="modal fade" id="modalDownload" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h6 class="modal-title" id="exampleModalLabel"><i class="fas fa-download"></i> Unduh Video</h6>
+        </div>
+        <div class="modal-body text-center modalDownload p-0">
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src='assets/js/script.js'></script>
   <script>
-    var exampleModal = document.getElementById('exampleModal')
+    const exampleModal = document.getElementById('exampleModal')
+    const modalDownload = document.getElementById('modalDownload')
     exampleModal.addEventListener('show.bs.modal', function (event) {
       // Button that triggered the modal
       var button = event.relatedTarget
@@ -88,6 +106,30 @@
 
       modalTitle.textContent = title
       modalBodyInput.innerHTML = isiModal
+    })
+
+    modalDownload.addEventListener('show.bs.modal', function (event) {
+      // Button that triggered the modal
+      var button = event.relatedTarget
+      // Extract info from data-bs-* attributes
+      // const title = button.getAttribute('data-title')
+      const id = button.getAttribute('data-id')
+      const isiModal = `
+      <div style="overflow: hidden;">
+        <iframe src="https://yt1s.com/en?q=${id}" style="margin-top: -300px; height: 750px; width: 100%;" frameborder="0">
+        </iframe>
+      </div>
+
+      `
+      // If necessary, you could initiate an AJAX request here
+      // and then do the updating in a callback.
+      //
+      // Update the modal's content.
+      // var modalTitle = exampleModal.querySelector('.modal-title')
+      const modalBodyInput = modalDownload.querySelector('.modalDownload')
+
+      modalBodyInput.innerHTML = isiModal
+      
     })
   </script>
   <!--<script src="//cdn.jsdelivr.net/npm/eruda"></script>-->
