--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,12 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-12 my-2 text-center">
+      <div class="col-12 col-md-8 my-2 text-center">
         <h3>30 Hari Jago JavaScript</h3>
       </div>
     </div>
     <div class="row">
-      <div class="col-12 my-1">
+      <div class="col-12 col-md-8 my-1">
 
         <div class="accordion" id="bulan">
 
