nambah class text-center di container

--- a/public/index.html
+++ b/public/index.html
@@ -27,14 +27,14 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <div class="container mx-auto">
+  <div class="container text-center">
     <div class="row">
-      <div class="col-12 col-md-6 my-2 text-center">
+      <div class="col-12 col-lg-8 my-2 mx-auto text-center">
         <h3>30 Hari Jago JavaScript</h3>
       </div>
     </div>
     <div class="row">
-      <div class="col-12 col-md-6 my-1">
+      <div class="col-12 col-lg-8 my-1 mx-auto">
 
         <div class="accordion" id="bulan">
 
