--- a/public/index.html
+++ b/public/index.html
@@ -1,140 +1,208 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
-  <link rel="icon" type="image/ico" href="assets/img/favicon.ico">
-  <link rel="manifest" href="assets/img/site.webmanifest">
-  <link rel="mask-icon" href="assets/img/safari-pinned-tab.svg" color="#5bbad5">
-  <link rel="shortcut icon" href="assets/img/favicon.ico">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="msapplication-config" content="assets/img/browserconfig.xml">
-  <meta name="theme-color" content="#ffffff">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:image" content="https://i.postimg.cc/YCz7x2fZ/banner-30days.jpg">
-  <link rel="image_src" href="https://i.postimg.cc/YCz7x2fZ/banner-30days.jpg">
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://belajar-js.tfkhdyt.my.id" />
-  <meta property="og:title" content="30 Hari Jago JavaScript">
-  <meta property="og:description" content="Website Pembelajaran JavaScript Berbasis Video">
-  <meta name="description" content="Website Pembelajaran JavaScript Berbasis Video">
-  <title>30 Hari Jago JavaScript</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-  <div class="container text-center">
-    <div class="row">
-      <div class="col-12 col-lg-8 my-2 mx-auto text-center">
-        <h3>30 Hari Jago JavaScript</h3>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12 col-lg-8 my-1 mx-auto">
-
-        <div class="accordion" id="bulan">
-
-        </div>
-
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h6 class="modal-title" id="exampleModalLabel">Ini judul video</h6>
-        </div>
-        <div class="modal-body text-center">
-
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal Download -->
-  <div class="modal fade" id="modalDownload" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h6 class="modal-title" id="exampleModalLabel"><i class="fas fa-download"></i> Unduh Video</h6>
-        </div>
-        <div class="modal-body text-center modalDownload p-0">
-
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
+  <head>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/img/apple-touch-icon.png"
+    />
+    <link rel="icon" type="image/ico" href="assets/img/favicon.ico" />
+    <link rel="manifest" href="assets/img/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="assets/img/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <link rel="shortcut icon" href="assets/img/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="msapplication-config" content="assets/img/browserconfig.xml" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      property="og:image"
+      content="https://i.postimg.cc/YCz7x2fZ/banner-30days.jpg"
+    />
+    <link
+      rel="image_src"
+      href="https://i.postimg.cc/YCz7x2fZ/banner-30days.jpg"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://belajar-js.tfkhdyt.my.id" />
+    <meta property="og:title" content="30 Hari Jago JavaScript" />
+    <meta
+      property="og:description"
+      content="Website Pembelajaran JavaScript Berbasis Video"
+    />
+    <meta
+      name="description"
+      content="Website Pembelajaran JavaScript Berbasis Video"
+    />
+    <title>30 Hari Jago JavaScript</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-12 col-lg-8 my-2 mx-auto text-center">
+          <h3>30 Hari Jago JavaScript</h3>
         </div>
       </div>
+      <div class="row">
+        <div class="col-12 col-lg-8 my-1 mx-auto">
+          <div class="accordion" id="bulan"></div>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <script src='assets/js/script.js'></script>
-  <script>
-    const exampleModal = document.getElementById('exampleModal')
-    const modalDownload = document.getElementById('modalDownload')
-    exampleModal.addEventListener('show.bs.modal', function (event) {
-      // Button that triggered the modal
-      var button = event.relatedTarget
-      // Extract info from data-bs-* attributes
-      const title = button.getAttribute('data-title')
-      const id = button.getAttribute('data-id')
-      const isiModal = `
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h6 class="modal-title" id="exampleModalLabel">Ini judul video</h6>
+          </div>
+          <div class="modal-body text-center"></div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              <i class="fas fa-times-circle"></i> Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal Download -->
+    <div
+      class="modal fade"
+      id="modalDownload"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h6 class="modal-title" id="exampleModalLabel">
+              <i class="fas fa-download"></i> Unduh Video
+            </h6>
+          </div>
+          <div class="modal-body text-center modalDownload p-0"></div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              <i class="fas fa-times-circle"></i> Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script src="assets/js/script.js"></script>
+    <script>
+      const exampleModal = document.getElementById('exampleModal');
+      const modalDownload = document.getElementById('modalDownload');
+      exampleModal.addEventListener('show.bs.modal', function (event) {
+        // Button that triggered the modal
+        var button = event.relatedTarget;
+        // Extract info from data-bs-* attributes
+        const title = button.getAttribute('data-title');
+        const id = button.getAttribute('data-id');
+        const isiModal = `
       <div>
       <div style="padding-top: 56.25%;">
       <iframe src="https://www.youtube.com/embed/${id}" frameborder="0" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
       </div>
       </div>
-      `
-      // If necessary, you could initiate an AJAX request here
-      // and then do the updating in a callback.
-      //
-      // Update the modal's content.
-      var modalTitle = exampleModal.querySelector('.modal-title')
-      var modalBodyInput = exampleModal.querySelector('.modal-body')
+      `;
+        // If necessary, you could initiate an AJAX request here
+        // and then do the updating in a callback.
+        //
+        // Update the modal's content.
+        var modalTitle = exampleModal.querySelector('.modal-title');
+        var modalBodyInput = exampleModal.querySelector('.modal-body');
 
-      modalTitle.textContent = title
-      modalBodyInput.innerHTML = isiModal
-    })
+        modalTitle.textContent = title;
+        modalBodyInput.innerHTML = isiModal;
+      });
 
-    modalDownload.addEventListener('show.bs.modal', function (event) {
-      // Button that triggered the modal
-      var button = event.relatedTarget
-      // Extract info from data-bs-* attributes
-      // const title = button.getAttribute('data-title')
-      const id = button.getAttribute('data-id')
-      let isiModal = '';
-      isiModal = `
-        <div style="overflow: hidden;">
-          <iframe scrolling='no' src="https://yt1s.com/en?q=${id}" style="margin-top: -300px; height: 750px; width: 100%;" frameborder="0">
-          </iframe>
-        </div>
-      `
-      // If necessary, you could initiate an AJAX request here
-      // and then do the updating in a callback.
-      //
-      // Update the modal's content.
-      // var modalTitle = exampleModal.querySelector('.modal-title')
-      const modalBodyInput = modalDownload.querySelector('.modalDownload')
+      modalDownload.addEventListener('show.bs.modal', function (event) {
+        // Button that triggered the modal
+        var button = event.relatedTarget;
+        // Extract info from data-bs-* attributes
+        // const title = button.getAttribute('data-title')
+        const id = button.getAttribute('data-id');
+        let isiModal = '';
+        isiModal = `
+      <div style="overflow: hidden;">
+      <iframe scrolling='no' src="https://yt1s.com/en?q=${id}" style="margin-top: -300px; height: 750px; width: 100%;" frameborder="0">
+      </iframe>
+      </div>
+      `;
+        // If necessary, you could initiate an AJAX request here
+        // and then do the updating in a callback.
+        //
+        // Update the modal's content.
+        // var modalTitle = exampleModal.querySelector('.modal-title')
+        const modalBodyInput = modalDownload.querySelector('.modalDownload');
 
-      modalBodyInput.innerHTML = isiModal
-
-    })
-  </script>
-  <!--<script src="//cdn.jsdelivr.net/npm/eruda"></script>-->
-  <!--<script>-->
-  <!--  eruda.init();-->
-  <!--</script>-->
-</body>
+        modalBodyInput.innerHTML = isiModal;
+      });
+    </script>
+    <!--<script src="//cdn.jsdelivr.net/npm/eruda"></script>-->
+    <!--<script>-->
+    <!--  eruda.init();-->
+    <!--</script>-->
+  </body>
 </html>
